testdata/cases/analyze/non_pointer_unmarshal.expected
testdata/cases/analyze/non_pointer_unmarshal.go:6:30: error[non-pointer-unmarshal]: json.Unmarshal expects to unmarshal into a pointer, but the provided value is not a pointer
