testdata/cases/analyze/non_pointer_unmarshal.go
package analyze_cases

import "encoding/json"

func unmarshalIntoNonPointer(data []byte, value map[string]any) error {
	return json.Unmarshal(data, value)
}
